# global-illumination

./: .clang-format  .gitignore  CMakeLists.txt  README.md  global-illumination.code-workspace  main.cpp
app/: CMakeLists.txt
app/include/: Gui.h  Viewer.h  gui.h  viewer.h
app/src/: Gui.cpp  Viewer.cpp  main.cpp
include/: BoundingBox.h  ExplicitEntity.h  ImplicitSphere.h  SimpleMaterial.h  bbox.h  camera.h  checkerboard_material.h  entities.h  entity.h  explicit_entity.h  gui.h  image.h  implicit_sphere.h  material.h  octree.h  ray.h  raytracer.h  simple_material.h  triangle.h  viewer.h
rt/: CMakeLists.txt
rt-cl/: CMakeLists.txt
rt-cl/src/: rt.cpp
rt/include/: BVH.h  BoundingBox.h  Camera.h  CheckerboardMaterial.h  Entity.h  ExplicitEntity.h  Image.h  Material.h  NDChecker.h  NoiseTexture.h  ObjReader.h  Octree.h  PathTracer.h  RandomUtils.h  Ray.h  RayTracer.h  Scene.h  Texture.h  camera.h  entities.h  image.h
rt/src/: BVH.cpp  BoundingBox.cpp  Camera.cpp  CheckerboardMaterial.cpp  Entity.cpp  ExplicitEntity.cpp  Image.cpp  ImplicitSphere.cpp  Material.cpp  ObjReader.cpp  Octree.cpp  PathTracer.cpp  RayTracer.cpp  Scene.cpp  Triangle.cpp  entities.cpp
rt/test/: CMakeLists.txt  bbox-test.cpp  checkerboard-test.cpp  entities-test.cpp  main.cpp  uv-mapping-test.cpp
share/: .gitignore  info.txt
src/: CMakeLists.txt  CheckerboardMaterial.cpp  Cube.cpp  ExplicitEntity.cpp  ExplicitSphere.cpp  ImplicitSphere.cpp  Octree.cpp  SimpleMaterial.cpp  checkerboard_material.cpp  entities.cpp  explicit_entity.cpp  implicit_sphere.cpp  main.cpp  quad.cpp  raytracer.cpp  simple_material.cpp  triangle.cpp
test/: CMakeLists.txt  bbox-test.cpp  checkerboard-test.cpp  entities-test.cpp  uv-mapping-test.cpp
